casi la funcionabilidad completa

--- a/article/202009181457-genesis.html
+++ b/article/202009181457-genesis.html
@@ -7,3 +7,19 @@
 <p>
     Esto implica que la base de la web será un marco básico igual para cada página, es decir, un header y un footer iguales para toda la web y que el contenido de la página sea un artículo. Adiós a las páginas especiales, adiós a la biografía, adiós a la pagina de contacto. Todo será un marco y un contenido.
 </p>
+
+<h3>Inspiraciones</h3>
+
+<ul>
+    <li><a href="https://mango.pdf.zone/">mango.pdf.zone</a></li>
+    <li><a href="http://motherfuckingwebsite.com/">motherfuckingwebsite.com</a></li>
+</ul>
+
+<h3>A tener en cuenta</h3>
+
+<ul>
+    <li><a href="https://ux.stackexchange.com/questions/3282/what-is-the-best-color-combination-for-on-screen-reading">What is the best color combination for on screen reading?</a></li>
+    <li><a href="https://ux.stackexchange.com/questions/551/white-text-on-black-background">White text on black background</a></li>
+    <li><a href="https://www.hostinger.com/tutorials/best-html-web-fonts">The 20 Best HTML Web Fonts To Use In 2020</a></li>
+    <li><a href="https://www.cs.cmu.edu/~jbigham/pubs/pdfs/2017/colors.pdf">Good Background Colors for Readers: A Study of People with and without Dyslexia</a></li>
+</ul>
