--- a/article/202009181457i-genesis.html
+++ b/article/202009181457i-genesis.html
@@ -8,6 +8,16 @@
     Esto implica que la base de la web será un marco básico igual para cada página, es decir, un header y un footer iguales para toda la web y que el contenido de la página sea un artículo. Adiós a las páginas especiales, adiós a la biografía, adiós a la pagina de contacto. Todo será un marco y un contenido.
 </p>
 
+<h3>La página en si</h3>
+
+<p>
+    La página en si tiene poca cosa, consta únicamente de un index.php y una carpeta "articles" donde se guardan los diferentes posts. El index.php, fiel al concepto original de la web, es únicamente un marco de header-footer donde en en el medio se coloca el contenido. Además he extremado la simplicidad basándome en que por el momento no hay suficientes lineas de código en este archivo como para dividir el HTML, el CSS y el PHP en tres, por lo que así me ahorro tener que cargar archivos remotos, sin contar con el artículo en sí. Los archivos de los posts, o artículos, tienen una estructura muy simple, lo único que se debe respetar a rajatabla son dos cocas; una es el formato de nombre: AAAAMMDDhhmma-titulo.html, donde "AAAA" es el año, "MM" es el mes, "DD" es el día, "hh" es la hora, "mm", son los minutos y donde "a" es el id del autor. Y otra es que la primera linea del archivo debe contener el título rodeado de los tags HTML "&lt;h2&gt;&lt;/h2&gt;". El resto del artículo es HTML puro, por lo general siempre debería prevalecer la sintaxis básica de etiquetas HTML5 pero en caso de ser necesario se pueden agregar scripts en JavaScript o estilos CSS personalizados dentro del propio archivo del artículo.
+</p>
+
+<h3>El estilo</h3>
+
+Bueno...
+
 <h3>Inspiraciones</h3>
 
 <ul>
