--- a/article/202009181457i-genesis.html
+++ b/article/202009181457i-genesis.html
@@ -1,35 +1,80 @@
 <h2>Génesis</h2>
 
 <p>
-    El concepto de esta aventura internauta se basa en la simplicidad. Aprovechando la las características de HTML5 y un poco de PHP crearé una web estilo Blog basada únicamente en su contenido, sus entradas, con un diseño MUY básico y pocos estilos.
+    El concepto de esta aventura internautica se basa en la simplicidad. Aprovechando ya las características de HTML5 y un poco de PHP crearé una web estilo Blog basada únicamente en su contenido, sus entradas, con un diseño <b>muy</b> básico y pocos estilos.
 </p>
 
 <p>
-    Esto implica que la base de la web será un marco básico igual para cada página, es decir, un header y un footer iguales para toda la web y que el contenido de la página sea un artículo. Adiós a las páginas especiales, adiós a la biografía, adiós a la pagina de contacto. Todo será un marco y un contenido.
+    Esto implica que la base de la web será un marco igual para cada página, es decir, un header y un footer iguales para toda la web y que el contenido de la página sea un artículo. Adiós a las páginas especiales, adiós a la biografía, adiós a la pagina de contacto. Todo será un marco y un contenido.
 </p>
 
-<h3>La página en si</h3>
+<h3>Estructura interna</h3>
 
 <p>
-    La página en si tiene poca cosa, consta únicamente de un index.php y una carpeta "articles" donde se guardan los diferentes posts. El index.php, fiel al concepto original de la web, es únicamente un marco de header-footer donde en en el medio se coloca el contenido. Además he extremado la simplicidad basándome en que por el momento no hay suficientes lineas de código en este archivo como para dividir el HTML, el CSS y el PHP en tres, por lo que así me ahorro tener que cargar archivos remotos, sin contar con el artículo en sí. Los archivos de los posts, o artículos, tienen una estructura muy simple, lo único que se debe respetar a rajatabla son dos cocas; una es el formato de nombre: AAAAMMDDhhmma-titulo.html, donde "AAAA" es el año, "MM" es el mes, "DD" es el día, "hh" es la hora, "mm", son los minutos y donde "a" es el id del autor. Y otra es que la primera linea del archivo debe contener el título rodeado de los tags HTML "&lt;h2&gt;&lt;/h2&gt;". El resto del artículo es HTML puro, por lo general siempre debería prevalecer la sintaxis básica de etiquetas HTML5 pero en caso de ser necesario se pueden agregar scripts en JavaScript o estilos CSS personalizados dentro del propio archivo del artículo.
+    La página en sí tiene poca cosa, consta únicamente de un <samp>index.php</samp> y una carpeta "articles" donde se guardan los diferentes posts. El <samp>index.php</samp>, fiel al concepto original de la web, es únicamente un marco de header-footer donde en en el medio se coloca el contenido. Además he extremado la simplicidad basándome en que por el momento no hay suficientes lineas de código en este archivo como para dividir el HTML, el CSS y el PHP en tres, por lo que así me ahorro tener que cargar archivos remotos, exceptuando el texto del artículo.
+</p>
+
+<p>
+    Los archivos de los posts, o artículos, tienen una estructura muy simple, lo único que se debe respetar son dos cocas; una es el formato del nombre para el archivo: <samp>AAAAMMDDhhmma-titulo-del-articulo.html</samp>, donde <code>AAAA</code> es el año, <samp>MM</samp> es el mes, <samp>DD</samp> es el día, <samp>hh</samp> es la hora, <samp>mm</samp>, son los minutos y donde <samp>a</samp> es el id del autor. Y otra es que la primera linea del archivo debe contener el título rodeado de los tags HTML <code>&lt;h2&gt;&lt;/h2&gt;</code>. El resto del artículo es HTML puro, por lo general siempre debería prevalecer la sintaxis básica de etiquetas HTML5 pero en caso de ser necesario se pueden agregar scripts en JavaScript o estilos CSS personalizados dentro del propio archivo del artículo.
 </p>
 
 <h3>El estilo</h3>
 
-Bueno...
+<p>
+    Debido a que la tendencia actual en el diseño de páginas web consiste en basarse únicamente en <code>div</code> y <code>span</code> para, formatearlos mas tarde con CSS, yo nunca había utilizado las etiquetas HTML5 dándoles un uso correcto, ni utilizándolas para lo que realmente se habían concebido. Pero esta vez me he propuesto usarlas. Utilizarlas para la mayor parte del formato de texto de los artículos de esta web. Gracias a ello he descubierto que realmente el HTML5 es un lenguaje que no requiere de CSS para cualquier cosa.
+</p>
+
+<p>
+    Tanto es este afán mio por explotar por completo el HTML que por el momento este es todo el CSS que he necesitado:
+</p>
+
+<pre>
+body {
+    background-color: #EDD1B0;
+    color: #000000;
+    font-size: 1.2em;
+    font-family: Sans-serif;
+}
+
+header, footer {
+    text-align: center;
+}
+
+div#content {
+    width: 100%;
+    max-width: 750px;
+    margin: 0px auto;
+}
+</pre>
+
+<h4>Listado de etiquetas útiles para formatear texto rápido en HTML5</h4>
+
+<ul>
+    <li><code>&lt;b&gt;</code>: Negrita.</li>
+    <li><code>&lt;i&gt;</code>: Cursiva.</li>
+    <li><code>&lt;code&gt;</code>: Código informático.</li>
+    <li><code>&lt;samp&gt;</code>: Salida de muestra de un programa de computadora.</li>
+    <li><code>&lt;pre&gt;</code>: Bloque de texto pre-formateado.</li>
+    <li><code>&lt;blockquote&gt;</code>: Cita indentada en bloque.</li>
+    <li><code>&lt;hr&gt;</code>: Linea horizontal.</li>
+</ul>
+
+<h4>Sobre colores y fuentes</h4>
+
+...
 
 <h3>Inspiraciones</h3>
 
 <ul>
-    <li><a href="https://mango.pdf.zone/">mango.pdf.zone</a></li>
     <li><a href="http://motherfuckingwebsite.com/">motherfuckingwebsite.com</a></li>
+    <li><a href="https://mango.pdf.zone/">mango.pdf.zone</a></li>
 </ul>
 
 <h3>A tener en cuenta</h3>
 
 <ul>
+    <li><a href="https://www.cs.cmu.edu/~jbigham/pubs/pdfs/2017/colors.pdf">Good Background Colors for Readers: A Study of People with and without Dyslexia</a></li>
     <li><a href="https://ux.stackexchange.com/questions/3282/what-is-the-best-color-combination-for-on-screen-reading">What is the best color combination for on screen reading?</a></li>
     <li><a href="https://ux.stackexchange.com/questions/551/white-text-on-black-background">White text on black background</a></li>
     <li><a href="https://www.hostinger.com/tutorials/best-html-web-fonts">The 20 Best HTML Web Fonts To Use In 2020</a></li>
-    <li><a href="https://www.cs.cmu.edu/~jbigham/pubs/pdfs/2017/colors.pdf">Good Background Colors for Readers: A Study of People with and without Dyslexia</a></li>
 </ul>
