--- a/article/202009181510i-descripcion.html
+++ b/article/202009181510i-descripcion.html
@@ -1,7 +1,7 @@
 <h2>Descripción</h2>
 
 <p>
-    Blog/Web personal donde iré registrando mis proyectos y mis fumadas mentales.
+    Blog/Web personal auto-gestionado donde iré registrando mis proyectos y mis fumadas mentales.
 </p>
 
 <p>
