ajustado el CSS

--- a/article/202009181457i-genesis.html
+++ b/article/202009181457i-genesis.html
@@ -32,11 +32,11 @@
 body {
     background-color: #EDD1B0;
     color: #000000;
-    font-size: 1.2em;
-    font-family: Sans-serif;
+    font-size: 1.35em;
+    font-family: Times, Serif;
 }
 
-header, footer {
+header, footer, p.center {
     text-align: center;
 }
 
@@ -44,6 +44,11 @@ div#content {
     width: 100%;
     max-width: 750px;
     margin: 0px auto;
+}
+
+pre {
+    background-color: #dfdebe; /*#f8bba5*/
+    padding: 10px;
 }
 </pre>
 
@@ -57,6 +62,8 @@ div#content {
     <li><code>&lt;pre&gt;</code>: Bloque de texto pre-formateado.</li>
     <li><code>&lt;blockquote&gt;</code>: Cita indentada en bloque.</li>
     <li><code>&lt;hr&gt;</code>: Linea horizontal.</li>
+    <li><code>&lt;br&gt;</code>: Salto de línea.</li>
+    <li><code>&lt;wbr&gt;</code>: Indica, en medio de una larga cadena de caracteres, donde cortarla con un salto de línea, si es necesario.</li>
 </ul>
 
 <h4>Sobre colores y fuentes</h4>
