--- a/article/202009181457i-genesis.html
+++ b/article/202009181457i-genesis.html
@@ -47,7 +47,7 @@ div#content {
 }
 
 pre {
-    background-color: #dfdebe; /*#f8bba5*/
+    background-color: #dfdebe;
     padding: 10px;
 }
 </pre>
