agregada funcionabilidad de link a la página del autor

--- a/article/202009181457i-genesis.html
+++ b/article/202009181457i-genesis.html
@@ -68,7 +68,29 @@ pre {
 
 <h4>Sobre colores y fuentes</h4>
 
-...
+<p>
+    Puede que la selección de colores resulte un tanto... como decirlo... horrorosa. Pero en mi defensa diré que me he basado en un <a href="https://www.cs.cmu.edu/~jbigham/pubs/pdfs/2017/colors.pdf">paper</a> para elegir la combinación de colores fondo/letra. Esta tonalidad de fondo <code>#edd1b0</code> (melocotón) sobre el negro de la tipografía es la que más me ha convencido de las tres opciones que daba el artículo como conclusión. Según el, tanto el <code>#edd1b0</code> (melocotón), como el <code>#EDDD6E</code> (naranja) o el <code>#F8FD89</code> (amarillo), todos ellos con letra negra, facilitan la lectura de texto en pantalla para personas con, o sin dislexia.
+</p>
+
+<p>
+    De todas formas una elección de color si que va en contra completamente de lo que indica el anterior artículo. Se trata de el verde (<code>#dfdebe</code>) que escogí para resaltar los cuadros de código sobre el fondo melocotón. Para llegar a este color lo consulté con la <a href="https://encycolorpedia.es/edd1b0">encicolorpedia</a> y lo encontré en la sección de análogos.
+</p>
+
+<p>
+    De todas formas la elección del color, aunque yo creo que estoy contento con ella, por el momento queda bajo revisión. Y en el futuro me gustaría añadir un selector de temas estilo <a href="https://4chan.org">4chan</a> donde también agregaré el cada vez mas popular <i>dark mode</i>, entre otros que a mi me gusten.
+</p>
+
+<p>
+    Con respecto a la fuente las cosas han sido mas fáciles. Posiblemente porque no leí tanto para elegirla, y debido a que ya tenía una idea en la cabeza de que debería ser una estilo <code>Serif</code>. Todo esto motivado por mi obsesión con <code>LaTeX</code> y que su fuente por defecto es la <code>Computer Modern</code>.
+</p>
+
+<p>
+    Otro elemento fundamental con respecto a la selección de la fuente fue que, para garantizar el principio de simplicidad máximo que me propuse, debía cargarse de forma local desde el equipo (lo que se denomina como <i>Web Safe Font</i>), no descargarse desde el servidor remoto junto a la página, como se hace hoy día en muchos sitios.
+</p>
+
+<p>
+    Por estos dos motivos elegí la letra <code>Times</code> para los dispositivos que la tuviesen instalada y, como segunda opción, concretamente porque los dispositivos Android no traen la letra <code>Times</code> instalada, indico que el dispositivo elija la letra estilo <code>Serif</code> que tenga por defecto.
+</p>
 
 <h3>Inspiraciones</h3>
 
