preparando para la publicación

--- a/article/202009180001i-faq.html
+++ b/article/202009180001i-faq.html
@@ -16,4 +16,10 @@ Ejem...
 
 <h3>¿Puedo compartir, citar o copiar el contenido o la totalidad de un post?</h3>
 
-Bueno...
+<p>
+    Todo el contenido multimedia que se muestra en esta página se encuentra bajo la licencia <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons BY-NC-SA 4.0</a>. Con contenido multimedia me refiero todos los textos, imágenes, vídeos y audios que puedas ver publicados aquí.
+</p>
+
+<p>
+    Por otro lado el código fuente en PHP, HTML, CSS y JS que escriba para que la web funcione está guardado en <a href="https://github.com/1noro/record.rat.la">GitHub</a> bajo la licencia <a href="https://www.gnu.org/licenses/gpl-3.0.html">GNU GENERAL PUBLIC LICENSE Versión 3</a>.
+</p>
