--- a/article/202009180002i-inoro.html
+++ b/article/202009180002i-inoro.html
@@ -5,11 +5,11 @@
 </p>
 
 <p>
-    Había una vez un tabernero que tenía muy mala memoria (casi tan mala memoria como yo) y, como toda persona normal que llevase un negocio, el apuntaba en una libreta los nombres de las personas que le debían dinero, junto a la cantidad adeudada.
+    &laquo;Había una vez un tabernero que tenía muy mala memoria (casi tan mala memoria como yo) y, como toda persona normal que llevase un negocio, el apuntaba en una libreta los nombres de las personas que le debían dinero, junto a la cantidad adeudada.
 </p>
 
 <p>
-    Pero resulta que algunas veces, como toda persona olvidadiza, solo se acordaba del nombre del sujeto que le debía dinero, y no de la cantidad. Por lo que el tabernero apuntaba el nombre seguido de la palabra <i>inoro</i>. De esta forma sabía que Fulanito le debía algo y, aunque sea una información sesgada, el confiaba en la honestidad de las buenas personas, a las que podría preguntarles si se acordaban de cuanto le debían.
+    Pero resulta que algunas veces, como toda persona olvidadiza, solo se acordaba del nombre del sujeto que le debía dinero, y no de la cantidad. Por lo que el tabernero apuntaba el nombre seguido de la palabra <i>inoro</i>. De esta forma sabía que Fulanito le debía algo y, aunque sea una información sesgada, el confiaba en la honestidad de las buenas personas, a las que podría preguntarles si se acordaban de cuanto le debían.&raquo;
 </p>
 
 <p>
