--- a/factory/202009190140i-configurando-nginx-para-esta-web.html
+++ b/factory/202009190140i-configurando-nginx-para-esta-web.html
@@ -1,5 +1,14 @@
-<h2>Configurando Nginx para record.rat.la</h2>
+<h2>Un servidor para record.rat.la</h2>
 
+<p>
+    Como por el momento esta web será para uso personal, y no tendrá una enorme carga de trabajo, voy a optar por instalarla en una máquina virtual <a href="#">Debian</a> 10 en mi servidor <a href="#">Proxmox</a>.
+</p>
+
+<p>
+    Aprovechando que siempre quise tener una web bajo un servidor <a href="#">Nginx</a> en ved de <a href="#">Apache2</a>, voy a utilizar esta oportunidad para aprender.
+</p>
+
+<h3>Configurando Nginx</h3>
 ...
 
 <h3>SSL con Lets Encrypt y Nginx</h3>
