--- a/article/202009181457i-genesis.html
+++ b/article/202009181457i-genesis.html
@@ -1,4 +1,4 @@
-<h2>Génesis</h2>
+<h2>Génesis ZZ</h2>
 
 <p>
     El concepto de esta aventura internautica se basa en la simplicidad. Aprovechando ya las características de HTML5 y un poco de PHP crearé una web estilo Blog basada únicamente en su contenido, sus entradas, con un diseño <b>muy</b> básico y pocos estilos.
