--- a/article/202009180001i-faq.html
+++ b/article/202009180001i-faq.html
@@ -4,7 +4,9 @@ Preguntas que yo ya se que vas a hacer.
 
 <h3>¿Qué es esto?</h3>
 
-Esto es...
+<p><a href="index.php">record.rat.la</a> es un blog/web personal auto-gestionado donde iré registrando mis proyectos y mis fumadas mentales.</p>
+
+<p>Para una respuesta más detallada visita la <a href="index.php?q=202009181430i-descripcion.html">descripción</a>.</p>
 
 <h3>¿Porqué haces esto?</h3>
 
