--- a/article/202009181457i-genesis.html
+++ b/article/202009181457i-genesis.html
@@ -47,9 +47,12 @@ div#content {
 }
 
 pre {
-    background-color: #dfdebe;
     padding: 10px;
     overflow: auto;
+}
+
+pre, code, samp {
+    background-color: #dfdebe;
 }
 </pre>
 
