reconsiderando lo que es samp y code

--- a/article/202009181457i-genesis.html
+++ b/article/202009181457i-genesis.html
@@ -15,7 +15,7 @@
 </p>
 
 <p>
-    Los archivos de los posts, o artículos, tienen una estructura muy simple, lo único que se debe respetar son dos cocas; una es el formato del nombre para el archivo: <samp>AAAAMMDDhhmma-titulo-del-articulo.html</samp>, donde <code>AAAA</code> es el año, <samp>MM</samp> es el mes, <samp>DD</samp> es el día, <samp>hh</samp> es la hora, <samp>mm</samp>, son los minutos y donde <samp>a</samp> es el id del autor. Y otra es que la primera linea del archivo debe contener el título rodeado de los tags HTML <code>&lt;h2&gt;&lt;/h2&gt;</code>. El resto del artículo es HTML puro, por lo general siempre debería prevalecer la sintaxis básica de etiquetas HTML5 pero en caso de ser necesario se pueden agregar scripts en JavaScript o estilos CSS personalizados dentro del propio archivo del artículo.
+    Los archivos de los posts, o artículos, tienen una estructura muy simple, lo único que se debe respetar son dos cocas; una es el formato del nombre para el archivo: <samp>AAAAMMDDhhmma-titulo-del-articulo.html</samp>, donde <samp>AAAA</samp> es el año, <samp>MM</samp> es el mes, <samp>DD</samp> es el día, <samp>hh</samp> es la hora, <samp>mm</samp>, son los minutos y donde <samp>a</samp> es el id del autor. Y otra es que la primera linea del archivo debe contener el título rodeado de los tags HTML <code>&lt;h2&gt;&lt;/h2&gt;</code>. El resto del artículo es HTML puro, por lo general siempre debería prevalecer la sintaxis básica de etiquetas HTML5 pero en caso de ser necesario se pueden agregar scripts en JavaScript o estilos CSS personalizados dentro del propio archivo del artículo.
 </p>
 
 <h3>El estilo</h3>
@@ -85,7 +85,7 @@ pre, code {
 </p>
 
 <p>
-    Con respecto a la fuente las cosas han sido mas fáciles. Posiblemente porque no leí tanto para elegirla, y debido a que ya tenía una idea en la cabeza de que debería ser una estilo <code>Serif</code>. Todo esto motivado por mi obsesión con <code>LaTeX</code> y que su fuente por defecto es la <code>Computer Modern</code>.
+    Con respecto a la fuente las cosas han sido mas fáciles. Posiblemente porque no leí tanto para elegirla, y debido a que ya tenía una idea en la cabeza de que debería ser una estilo <samp>Serif</samp>. Todo esto motivado por mi obsesión con <samp>LaTeX</samp> y que su fuente por defecto es la <samp>Computer Modern</samp>.
 </p>
 
 <p>
@@ -93,7 +93,7 @@ pre, code {
 </p>
 
 <p>
-    Por estos dos motivos elegí la letra <code>Times</code> para los dispositivos que la tuviesen instalada y, como segunda opción, concretamente porque los dispositivos Android no traen la letra <code>Times</code> instalada, indico que el dispositivo elija la letra estilo <code>Serif</code> que tenga por defecto.
+    Por estos dos motivos elegí la letra <samp>Times</samp> para los dispositivos que la tuviesen instalada y, como segunda opción, concretamente porque los dispositivos Android no traen la letra <samp>Times</samp> instalada, indico que el dispositivo elija la letra estilo <samp>Serif</samp> que tenga por defecto.
 </p>
 
 <h3>Inspiraciones</h3>
