--- a/article/202009190140i-configurando-nginx-para-esta-web.html
+++ b/article/202009190140i-configurando-nginx-para-esta-web.html
@@ -131,10 +131,10 @@ server {
 <h4>Modificaciones</h4>
 
 <ul>
-    <li>En primer lugar, necesitamos agregar <code>index.php</code> como el primer valor de nuestra directiva de índice para que los archivos denominados <code>index.php</code> se sirvan, si están disponibles, cuando se solicita un directorio.</li>
+    <li>En primer lugar, necesitamos agregar <samp>index.php</samp> como el primer valor de nuestra directiva de índice para que los archivos denominados <samp>index.php</samp> se sirvan, si están disponibles, cuando se solicita un directorio.</li>
     <li>Podemos modificar la directiva <code>server_name</code> para apuntar al nombre de dominio de nuestro servidor o a la dirección IP pública.</li>
-    <li>Para el procesamiento real de PHP, solo necesitamos descomentar un segmento del archivo que maneja las solicitudes de PHP. Éste será el bloque de ubicación <code>~.php$</code>, el fragmento <code>fastcgi-php.conf</code> incluido y el socket asociado con <code>php-fpm</code>.</li>
-    <li>También hay que remover los comentarios del bloque de ubicación que trata con archivos <code>.htaccess</code>. Nginx no procesa estos archivos. Si alguno de estos archivos encuentra la forma de llegar a un documento root, no deben ser servidos a los visitantes.</li>
+    <li>Para el procesamiento real de PHP, solo necesitamos descomentar un segmento del archivo que maneja las solicitudes de PHP. Éste será el bloque de ubicación <code>~.php$</code>, el fragmento <samp>fastcgi-php.conf</samp> incluido y el socket asociado con <code>php-fpm</code>.</li>
+    <li>También hay que remover los comentarios del bloque de ubicación que trata con archivos <samp>.htaccess</samp>. Nginx no procesa estos archivos. Si alguno de estos archivos encuentra la forma de llegar a un documento root, no deben ser servidos a los visitantes.</li>
 </ul>
 
 <h4><samp>record.rat.la.conf</samp> modificado</h4>
