Selector de color funcional y política de cookies

--- a/article/202009180003i-color.html
+++ b/article/202009180003i-color.html
@@ -3,6 +3,7 @@
 Selecciona la paleta de colores en la que quieres ver la página.
 
 <ul>
-    <li><a href="index.php?q=c&c=0">Melocotón</a> - Paleta por defecto</li>
-    <li><a href="index.php?q=c&c=1">Modo oscuro</a></li>
+    <li><a href="index.php?q=c&c=0">Melocotón</a> - Paleta por <b>defecto</b>.</li>
+    <li><a href="index.php?q=c&c=1">Modo oscuro</a> - Alto contraste.</li>
+    <li><a href="index.php?q=c&c=2">Auto</a> - Colores por defecto del navegador.</li>
 </ul>
