agregado un nuevo artículo y corregido otro

--- a/article/202009192256i-cookie.html
+++ b/article/202009192256i-cookie.html
@@ -5,7 +5,7 @@
 </p>
 
 <blockquote>
-    Una <i>cookie</i>, <b>galleta</b> en castellano, es un valor; pequeño texto o número que una página Web guarda en tu PC para que la próxima vez que vuelvas a acceder a ella, esta lo pueda leer.
+    Una <i>cookie</i>, <b>galleta</b> en castellano, es un valor; un pequeño texto o un número que la página web guarda en tu PC para que la próxima vez que vuelvas a acceder a ella, esta pueda leer esa información. Normalmente haciendo que no tengas que volver a introducir datos, o guardando configuraciones que se cargarán automáticamente.
 </blockquote>
 
 <p>
@@ -39,3 +39,10 @@
 <p>
     Bueno, pues mas o menos lo que yo dije.
 </p>
+
+<!--
+<h3>¿Porqué tienen mala fama?</h3>
+
+leer https://www.bbc.com/mundo/noticias-40443519
+
+-->
