--- a/article/202009200144i-ubiquiti-er-movistartv.html
+++ b/article/202009200144i-ubiquiti-er-movistartv.html
@@ -6,7 +6,7 @@
     <p>HGU = Router de Movistar, ER = EdgeRouter.</p>
 </blockquote>
 
-<h3>Si pruebas esta configuración y tienes fallos, coméntalos como issues de este repositorio</h3>
+<h3>Si pruebas esta configuración y tienes fallos, coméntalos como issues de <a href="https://github.com/1noro/ubiquiti-er-movistartv">este  repositorio</a>, o <a href="mailto:ppuubblliicc@protonmail.com">contácteme</a>.</h3>
 
 <h4>Escenario</h4>
 
@@ -116,4 +116,4 @@ show ip multicast interfaces
     <li><a href="https://comunidad.movistar.es/t5/Soporte-Fibra-y-ADSL/configuracion-del-router-ax-11000-asus-por-conexion-pppoe-ONT/m-p/4217145#M427122">https://comunidad.movistar.es/t5/Soporte-Fibra-y-ADSL/configuracion-del-router-ax-11000-asus-por-conexion-pppoe-ONT/m-p/4217145#M427122</a></li>
 </ul>
 
-<h3>Si pruebas esta configuración y tienes fallos, coméntalos como issues de este repositorio</h3>
+<h3>Si pruebas esta configuración y tienes fallos, coméntalos como issues de <a href="https://github.com/1noro/ubiquiti-er-movistartv">este  repositorio</a>, o <a href="mailto:ppuubblliicc@protonmail.com">contácteme</a>.</h3>
