test meta image 3

--- a/article/202009200144i-ubiquiti-er-movistartv.html
+++ b/article/202009200144i-ubiquiti-er-movistartv.html
@@ -10,7 +10,7 @@
 
 <h4>Escenario</h4>
 
-<p><img src="img/202009200144/mapa.png" alt="escenario"></p>
+<p><img src="img/202009200144/mapa.jpg" alt="escenario"></p>
 
 <h4>1 - Asignar a la interfaz WAN física del ER una IP fija o por DHCP dentro de la red del HGU</h4>
 
