--- a/article/202009192256i-cookie.html
+++ b/article/202009192256i-cookie.html
@@ -4,6 +4,12 @@
     Voy a definir lo que yo creo que es una <i>cookie</i> sin mirar la Wikipedia.
 </p>
 
+<p>
+    <a title="Ir a la web de origen de la imagen." href="https://uxdesign.cc/did-you-know-that-the-free-cookie-clicker-can-explain-key-mechanics-for-freemium-services-bf5140a50c04">
+        <img src="img/cookie.jpg" alt="Cookie grandam">
+    </a>
+</p>
+
 <blockquote>
     Una <i>cookie</i>, <b>galleta</b> en castellano, es un valor; un pequeño texto o un número que la página web guarda en tu PC para que la próxima vez que vuelvas a acceder a ella, esta pueda leer esa información. Normalmente haciendo que no tengas que volver a introducir datos, o guardando configuraciones que se cargarán automáticamente.
 </blockquote>
