new article in progress

--- a/factory/202009211245i-sobre-los-tags-meta.html
+++ b/factory/202009211245i-sobre-los-tags-meta.html
@@ -1,3 +1,8 @@
 <h2>Sobre los <i>tags meta</i></h2>
 
 <p>Resulta que...</p>
+
+<ul>
+    <li><a href="https://css-tricks.com/essential-meta-tags-social-media/">The Essential Meta Tags for Social Media</a></li>
+    <li><a href="https://cards-dev.twitter.com/validator">Twitter Card validator</a></li>
+</ul>
