--- a/factory/202009211245i-sobre-los-tags-meta.html
+++ b/factory/202009211245i-sobre-los-tags-meta.html
@@ -1,6 +1,8 @@
 <h2>Sobre los <i>tags meta</i></h2>
 
-<p>Resulta que...</p>
+<p>
+    Sigo experimentando con tecnologías web que nunca antes había profundizado en ellas, y hoy decidí meterme de lleno en las <i>meta tags</i>.
+</p>
 
 <ul>
     <li><a href="https://css-tricks.com/essential-meta-tags-social-media/">The Essential Meta Tags for Social Media</a></li>
