nueva paleta de colores

--- a/article/202009180003i-color.html
+++ b/article/202009180003i-color.html
@@ -6,4 +6,5 @@ Selecciona la paleta de colores en la que quieres ver la página.
     <li><a href="index.php?q=c&c=0">Melocotón</a> - Paleta por <b>defecto</b>.</li>
     <li><a href="index.php?q=c&c=1">Modo oscuro</a> - Alto contraste.</li>
     <li><a href="index.php?q=c&c=2">Auto</a> - Colores por defecto del navegador.</li>
+    <li><a href="index.php?q=c&c=3">N-O-D-E</a> - Soy muy fan de <a href="https://n-o-d-e.net">esa</a> web.</li>
 </ul>
