update factory posts

--- a/factory/202009192110i-cambios-en-la-paleta-de-colores.html
+++ b/factory/202009192110i-cambios-en-la-paleta-de-colores.html
@@ -1,3 +1,7 @@
 <h2>Cambios en la paleta de colores</h2>
 
 <p>Resulta que...</p>
+
+<ul>
+    <li><a href="https://n-o-d-e.net/">https://n-o-d-e.net/</a></li>
+</ul>
