--- a/article/202009180001i-faq.html
+++ b/article/202009180001i-faq.html
@@ -8,13 +8,17 @@ Preguntas que yo ya se que vas a hacer.
 
 <p>Para una respuesta más detallada visita la <a href="index.php?q=202009181430i-descripcion.html">descripción</a>.</p>
 
-<h3>¿Porqué haces esto?</h3>
+<!-- <h3>¿Porqué haces esto?</h3>
 
-Pues...
+<p>Pues...</p>
+
+<h3>¿Porqué rat.la?</h3>
+
+<p>Resulta que...</p>
 
 <h3>¿Cómo me muevo por la web?</h3>
 
-Ejem...
+<p>Ejem...</p> -->
 
 <h3>¿Puedo compartir, citar o copiar el contenido o la totalidad de un post?</h3>
 
