--- a/article/202009180002i-inoro.html
+++ b/article/202009180002i-inoro.html
@@ -13,5 +13,5 @@
 </p>
 
 <p>
-    Y eso es todo ¿una historia anodina verdad? Pero no importa, lo interesante recordé esta historia justo en el momento preciso en el que decidí cambiar de pseudónimo en internet.
+    Y eso es todo ¿una historia anodina verdad? Pero no importa, lo interesante es que recordé esta historia justo en el momento preciso en el que decidí cambiar de pseudónimo en internet.
 </p>
