--- a/article/202009180001i-faq.html
+++ b/article/202009180001i-faq.html
@@ -20,6 +20,16 @@ Preguntas que yo ya se que vas a hacer.
 
 <p>Ejem...</p> -->
 
+<h3>¿Porqué rat.la?</h3>
+
+<p>
+    Compré el dominio <samp>rat.la</samp> en busca de tres cosas: un nombre fácil de recordar, corto y asequible. Busqué durante mucho tiempo, probando múltiples combinaciones de letras, intentando evitar los números y descartando los dominios de nivel superior muy largos, estilo <samp>.website</samp>. Incluso llegué a utilizar generadores de palabras aleatorias para conseguir las palabras con 3 letras que encajasen mejor con mis requisitos.
+</p>
+
+<p>
+    Tras esa ardua búsqueda encontré en oferta el dominio <samp>.la</samp> y pensando un subdominio adecuado se me ocurrió "rat", como una rata cantando <i>La, lai>.
+</p>
+
 <h3>¿Puedo compartir, citar o copiar el contenido o la totalidad de un post?</h3>
 
 <p>
