--- a/article/202009180001i-faq.html
+++ b/article/202009180001i-faq.html
@@ -27,7 +27,7 @@ Preguntas que yo ya se que vas a hacer.
 </p>
 
 <p>
-    Tras esa ardua búsqueda encontré en oferta el dominio <samp>.la</samp> y pensando un subdominio adecuado se me ocurrió "rat", como una rata cantando <i>La, lai>.
+    Tras esa ardua búsqueda encontré en oferta el dominio <samp>.la</samp> y pensando un subdominio adecuado se me ocurrió "rat", como una rata cantando <i>La, la, la</i>.
 </p>
 
 <h3>¿Puedo compartir, citar o copiar el contenido o la totalidad de un post?</h3>
