--- a/article/202009261232i-los-buenos-dias-en-los-chats.html
+++ b/article/202009261232i-los-buenos-dias-en-los-chats.html
@@ -1,7 +1,7 @@
 <h2>Reflexión sobre los "Buenos días" en los chats on-line</h2>
 
 <p>
-    Nos ponemos en situación; tu estas en un chat en el que puedes o no conocer a todos los integrantes, pongamos que te levantas a las 6:00 AM (típica hora rutinaria durante el curso escolar) y como no hay mensajes nuevos y, aludiendo al proverbio hindú, si no tienes nada que decir que merezca la pena romper el silencio, te quedarás calladito. Opino que a las 6:00 AM no tienes nada interesante que quieras o puedas decir.
+    Nos ponemos en situación; tu estas en un chat en el que puedes, o no, conocer a todos los integrantes, pongamos que te levantas a las 6:00 AM (típica hora rutinaria durante el curso escolar) y como no hay mensajes nuevos y, aludiendo al proverbio hindú, si no tienes nada que decir que merezca la pena romper el silencio, te quedarás calladito. Opino que a las 6:00 AM no tienes nada interesante que quieras o puedas decir.
 </p>
 
 <p>
