--- a/public/pages/404.html
+++ b/public/pages/404.html
@@ -1,4 +1,10 @@
 <!-- 202009180000i -->
 <h1>404 - Not Found</h1>
 
-Parece que no hay nada por aquí...
+<p>
+    Parece que no hay nada por aquí...
+</p>
+
+<p>
+    La página de la URL no es correcta.
+</p>
