--- a/public/pages/genesis.html
+++ b/public/pages/genesis.html
@@ -2,7 +2,11 @@
 <h1>Génesis</h1>
 
 <p>
-    El concepto de esta aventura internautica se basa en la simplicidad. Aprovechando ya las características de HTML5 y un poco de PHP crearé una web estilo Blog basada únicamente en su contenido, sus entradas, con un diseño <b>muy</b> básico y pocos estilos.
+    <b>(ARTÍCULO DESACTUALIZADO)</b>
+</p>
+
+<p>
+    El concepto de esta aventura internáutica se basa en la simplicidad. Aprovechando ya las características de HTML5 y un poco de PHP crearé una web estilo Blog basada únicamente en su contenido, sus entradas, con un diseño <b>muy</b> básico y pocos estilos.
 </p>
 
 <p>
