cambiadas antiguas URLs que habían quedado descolgadas

--- a/public/pages/solucion-series-numericas-java-python.html
+++ b/public/pages/solucion-series-numericas-java-python.html
@@ -2,7 +2,7 @@
 <h1>Solución a algunas series numéricas en Java y Python</h1>
 
 <p>
-    Lista del código que calcula las diferentes series numéricas propuestas en el Ejercicio evaluable 1 de la asignatura <a href="index.php?q=202009301238i-programacion-multimedia-y-dispositivos-moviles.html">Programación Multimedia y Dispositivos Móviles</a>.
+    Lista del código que calcula las diferentes series numéricas propuestas en el Ejercicio evaluable 1 de la asignatura Programación Multimedia y Dispositivos Móviles.
 </p>
 
 <blockquote>
