--- a/public/pages/faq.html
+++ b/public/pages/faq.html
@@ -7,7 +7,7 @@ Preguntas que yo ya se que vas a hacer.
 
 <p><a href="index.php">record.rat.la</a> es un blog/web personal auto-gestionado donde iré registrando mis proyectos y mis líos mentales.</p>
 
-<p>Para una respuesta más detallada visita la <a href="index.php?q=202009181430i-descripcion.html">descripción</a>.</p>
+<p>Para una respuesta más detallada visita la <a href="index.php?page=descripcion.html">descripción</a>.</p>
 
 <!-- <h2>¿Porqué haces esto?</h2>
 
@@ -44,5 +44,5 @@ Preguntas que yo ya se que vas a hacer.
 <h2>¿Qué software utilizas?</h2>
 
 <p>
-    Me he currado una lista bastante detallada del software que utilizo habitualmente en <a href="index.php?q=202103101332i-mi-software.html">este post</a>. Espero que responda a la pregunta.
+    Me he currado una lista bastante detallada del software que utilizo habitualmente en <a href="index.php?page=mi-software.html">este post</a>. Espero que responda a la pregunta.
 </p>
