solucionado el fallo de SEO al duplicar <h1> en la portada

--- a/public/pages/mi-software.html
+++ b/public/pages/mi-software.html
@@ -10,6 +10,12 @@
 
 <h3>Sistema Operativo</h3>
 
+<h4>Hola h cuatro</h4>
+
+<h5>Hola h cinco</h5>
+
+<h6>Hola h seis</h6>
+
 <ul>
     <li>
         <a href="https://archlinux.org/download/"><b>Arch Linux</b></a> es mi 
