corrección de erratas

--- a/public/pages/mi-software.html
+++ b/public/pages/mi-software.html
@@ -8,13 +8,7 @@
 
 <h2>Básico</h2>
 
-<h3>Sistema Operativo</h3>
-
-<h4>Hola h cuatro</h4>
-
-<h5>Hola h cinco</h5>
-
-<h6>Hola h seis</h6>
+<h3>Sistemas Operativos</h3>
 
 <ul>
     <li>
