--- a/public/pages/configurando-nginx-para-esta-web.html
+++ b/public/pages/configurando-nginx-para-esta-web.html
@@ -1,9 +1,10 @@
 <!-- 202009190140i -->
 <h1>Un servidor para record.rat.la</h1>
 
-<p>
-    <b>(ESTA ARTÍCULO ESTÁ DESACTUALIZADO)</b>
-</p>
+<blockquote>
+    <!-- Lo pongo en un blockquote para que la descripción del artículo siga siendo la misma -->
+    <b>(ARTÍCULO DESACTUALIZADO)</b>
+</blockquote>
 
 <p>
     Como por el momento esta web será para uso personal, y no tendrá una enorme carga de trabajo, voy a optar por instalarla en una máquina virtual <a href="https://www.debian.org/index.es.html">Debian</a> 10 en mi servidor <a href="https://www.proxmox.com/en/">Proxmox</a>.
