--- a/public/pages/genesis.html
+++ b/public/pages/genesis.html
@@ -1,9 +1,10 @@
 <!-- 202009181457i -->
 <h1>Génesis</h1>
 
-<p>
+<blockquote>
+    <!-- Lo pongo en un blockquote para que la descripción del artículo siga siendo la misma -->
     <b>(ARTÍCULO DESACTUALIZADO)</b>
-</p>
+</blockquote>
 
 <p>
     El concepto de esta aventura internáutica se basa en la simplicidad. Aprovechando ya las características de HTML5 y un poco de PHP crearé una web estilo Blog basada únicamente en su contenido, sus entradas, con un diseño <b>muy</b> básico y pocos estilos.
