contiúo editando el artículo del software

--- a/public/pages/mi-software.html
+++ b/public/pages/mi-software.html
@@ -57,3 +57,18 @@
     aún no veo necesario mudarme a <b>zsh</b>, a pesar de que promete mucha 
     mas flexibilidad.
 </p>
+
+<h3>Editores de texto y entornos de programación</h3>
+
+<p>
+    Esta sección no solo es confusa, sinó que en realidad yo me encuentro muy 
+    confuso al respecto. Sigo buscando el editor de texto definitivo, he 
+    probado muchos, pero no paro de cambiar. Me gustaría proba <b>vim</b> pero 
+    creo que aún no estoy preparado.
+</p>
+
+<ul>
+    <li>
+        <b>Visual Studio Code</b> es actualmente mi editor de texto por defecto.
+    </li>
+</ul>
