--- a/public/pages/mi-software.html
+++ b/public/pages/mi-software.html
@@ -58,7 +58,7 @@
     mas flexibilidad.
 </p>
 
-<h3>Editores de texto y entornos de programación</h3>
+<!-- <h3>Editores de texto y entornos de programación</h3>
 
 <p>
     Esta sección no solo es confusa, sinó que en realidad yo me encuentro muy 
@@ -71,4 +71,4 @@
     <li>
         <b>Visual Studio Code</b> es actualmente mi editor de texto por defecto.
     </li>
-</ul>
+</ul> -->
