--- a/public/pages/mi-software.html
+++ b/public/pages/mi-software.html
@@ -69,6 +69,11 @@
 
 <ul>
     <li>
-        <b>Visual Studio Code</b> es actualmente mi editor de texto por defecto.
+        <b>Visual Studio Code</b> es actualmente mi entorno de desarrollo por 
+        defecto. Es rápido y muy extensible gracias a todos los plugins que se 
+        le pueden instalar. Empezé usando <b>atom</b> pero acabé canasdome de lo mal que funciona su cliente de <b>git</b>
+    </li>
+    <li>
+        <b>geany</b> para editar texto plano sin necesidad de plugins. Aunque cada vez lo uso menos, y para una función tan simple como esta acabo usando <b>nano</b>.
     </li>
 </ul> -->
