--- a/public/pages/configurando-nginx-para-esta-web.html
+++ b/public/pages/configurando-nginx-para-esta-web.html
@@ -298,7 +298,7 @@ certbot renew --dry-run
 ssh user@server_ip_or_domain 'git -C /var/www/record.rat.la pull'
 </pre>
 
-<h2>Habilitar el header HTTP <em>charset</em> UTF-8</h2>
+<h2>Habilitar el header HTTP, <em>charset</em> UTF-8</h2>
 
 <p>
     Editamos el archivo <samp>/etc/nginx/nginx.conf</samp> y agregamos la siguiente línea a la configuración del bloque <samp>http</samp>.
