--- a/public/pages/configurando-nginx-para-esta-web.html
+++ b/public/pages/configurando-nginx-para-esta-web.html
@@ -3,7 +3,7 @@
 
 <blockquote>
     <!-- Lo pongo en un blockquote para que la descripción del artículo siga siendo la misma -->
-    <b>(ARTÍCULO DESACTUALIZADO)</b>
+    <strong>(ARTÍCULO DESACTUALIZADO)</strong>
 </blockquote>
 
 <p>
@@ -235,7 +235,7 @@ apt install python3-acme python3-certbot python3-mock python3-openssl python3-pk
 apt install python3-certbot-nginx
 </pre>
 
-<p>Con el <i>Virtual Host</i> correctamente configurado en Nginx (como se indica en el apartado anterior), ejecutamos el <samp>certbot</samp></p>
+<p>Con el <em>Virtual Host</em> correctamente configurado en Nginx (como se indica en el apartado anterior), ejecutamos el <samp>certbot</samp></p>
 
 <pre>
 certbot --nginx -d record.rat.la
