--- a/public/pages/cookie.html
+++ b/public/pages/cookie.html
@@ -2,7 +2,7 @@
 <h1>Sobre las Cookies</h1>
 
 <p>
-    Voy a definir lo que yo creo que es una <i>cookie</i> sin mirar la Wikipedia.
+    Voy a definir lo que yo creo que es una <em>cookie</em> sin mirar la Wikipedia.
 </p>
 
 <p>
@@ -12,7 +12,7 @@
 </p>
 
 <blockquote>
-    Una <i>cookie</i>, <b>galleta</b> en castellano, es un valor; un pequeño texto o un número que la página web guarda en tu PC para que la próxima vez que vuelvas a acceder a ella, esta pueda leer esa información. Normalmente haciendo que no tengas que volver a introducir datos, o guardando configuraciones que se cargarán automáticamente.
+    Una <em>cookie</em>, <strong>galleta</strong> en castellano, es un valor; un pequeño texto o un número que la página web guarda en tu PC para que la próxima vez que vuelvas a acceder a ella, esta pueda leer esa información. Normalmente haciendo que no tengas que volver a introducir datos, o guardando configuraciones que se cargarán automáticamente.
 </blockquote>
 
 <p>
@@ -28,19 +28,19 @@
 </p>
 
 <p>
-    ¿Que tal? ¿Bonita, verdad? Pues eso es lo que hago yo con mi web. La única <i>cookie</i> que guardo en tu ordenador es un número que me indica que paleta de colores quieres usar para leer mis artículos. El 0 me dice que quieres la paleta por defecto, el 1 que eres un darks (o un receloso de tu batería) y te gusta leer todo en negro, el 3 que eres un soso y solo quieres los colores como manda el navegador, etc.
+    ¿Que tal? ¿Bonita, verdad? Pues eso es lo que hago yo con mi web. La única <em>cookie</em> que guardo en tu ordenador es un número que me indica que paleta de colores quieres usar para leer mis artículos. El 0 me dice que quieres la paleta por defecto, el 1 que eres un darks (o un receloso de tu batería) y te gusta leer todo en negro, el 3 que eres un soso y solo quieres los colores como manda el navegador, etc.
 </p>
 
 <p>
-    Y por mi parte, si eres de esos paranoicos de la privacidad (como yo), que piensan que las <i>cookies</i> son el demonio, y haces que tu navegador las borre cada 30 segundos, por mi perfecto, no hay ningún problema. Pero solo vas a poder leer la página con los colores por defecto.
+    Y por mi parte, si eres de esos paranoicos de la privacidad (como yo), que piensan que las <em>cookies</em> son el demonio, y haces que tu navegador las borre cada 30 segundos, por mi perfecto, no hay ningún problema. Pero solo vas a poder leer la página con los colores por defecto.
 </p>
 
 <p>
-    Y ahora veamos cómo define la Wikipedia una <i>cookie</i>.
+    Y ahora veamos cómo define la Wikipedia una <em>cookie</em>.
 </p>
 
 <blockquote cite="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)">
-    El anglicismo <i>cookie</i>, usado también <b>galleta</b> o <b>galleta informática</b> , es un término que hace referencia a una pequeña información enviada por un sitio web y almacenada en el navegador del usuario, de manera que el sitio web puede consultar la actividad previa del navegador. <a href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)">Leer mas...</a>
+    El anglicismo <em>cookie</em>, usado también <strong>galleta</strong> o <strong>galleta informática</strong> , es un término que hace referencia a una pequeña información enviada por un sitio web y almacenada en el navegador del usuario, de manera que el sitio web puede consultar la actividad previa del navegador. <a href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)">Leer mas...</a>
 </blockquote>
 
 <p>
