--- a/public/pages/habilitar-http2-nginx.html
+++ b/public/pages/habilitar-http2-nginx.html
@@ -5,7 +5,7 @@
 Utilizando la configuración de Nginx ya explicada en <a href="index.php?page=configurando-nginx-para-esta-web.html">este artículo</a> para esta misma página. Vamos a habilitar el protocolo HTTP/2 para mejorar la eficiencia y la seguridad a la hora de ofrecer la web al usuario final.
 </p>
 
-<p>Primero, editamos la configuración de nuestro <i>Virtual Host</i>.</p>
+<p>Primero, editamos la configuración de nuestro <em>Virtual Host</em>.</p>
 
 <pre>
 nano /etc/nginx/conf.d/record.rat.la.conf
