--- a/public/pages/inoro.html
+++ b/public/pages/inoro.html
@@ -10,7 +10,7 @@
 </p>
 
 <p>
-    Pero resulta que algunas veces, como toda persona olvidadiza, solo se acordaba del nombre del sujeto que le debía dinero, y no de la cantidad. Por lo que el tabernero apuntaba el nombre seguido de la palabra <i>inoro</i>. De esta forma sabía que Fulanito le debía algo y, aunque sea una información sesgada, el confiaba en la honestidad de las buenas personas, a las que podría preguntarles si se acordaban de cuanto le debían.&raquo;
+    Pero resulta que algunas veces, como toda persona olvidadiza, solo se acordaba del nombre del sujeto que le debía dinero, y no de la cantidad. Por lo que el tabernero apuntaba el nombre seguido de la palabra <em>inoro</em>. De esta forma sabía que Fulanito le debía algo y, aunque sea una información sesgada, el confiaba en la honestidad de las buenas personas, a las que podría preguntarles si se acordaban de cuanto le debían.&raquo;
 </p>
 
 <p>
