--- a/public/pages/la-forma-mas-rapida-de-hacer-un-git-push.html
+++ b/public/pages/la-forma-mas-rapida-de-hacer-un-git-push.html
@@ -19,7 +19,7 @@ git config --global user.name "nombre"
 git config --global user.email "email@example.com"
 </pre>
 
-<p>Una vez se hayan cumplido los requisitos previos, solo hay que copiar <b>todos</b> los comandos que vienen a continuación y los pegamos en la terminal.</p>
+<p>Una vez se hayan cumplido los requisitos previos, solo hay que copiar <strong>todos</strong> los comandos que vienen a continuación y los pegamos en la terminal.</p>
 
 <pre>
 git add . \
@@ -28,5 +28,5 @@ git push
 </pre>
 
 <blockquote>
-    Si tenemos configurado el <i>GIT</i> por <i>SSH</i> no hace falta que pongáis la contraseña, pero si lo tenéis por <i>HTTPS</i>, os solicitará el nombre de usuario y la contraseña de <i>GitHub</i>, <i>GitLab</i>, etc.
+    Si tenemos configurado el <em>GIT</em> por <em>SSH</em> no hace falta que pongáis la contraseña, pero si lo tenéis por <em>HTTPS</em>, os solicitará el nombre de usuario y la contraseña de <em>GitHub</em>, <em>GitLab</em>, etc.
 </blockquote>
