--- a/public/pages/solucion-series-numericas-java-python.html
+++ b/public/pages/solucion-series-numericas-java-python.html
@@ -6,7 +6,7 @@
 </p>
 
 <blockquote>
-    <i>Voy a tomar como regla que todas las listas serán de 100 elementos como máximo.</i>
+    <em>Voy a tomar como regla que todas las listas serán de 100 elementos como máximo.</em>
 </blockquote>
 
 <h2>1. La serie de Fibonacci</h2>
@@ -167,7 +167,7 @@ print(lista)
 
 <h2>5. La serie que suma las cifras de los anteriores</h2>
 
-<p>Ojo, se refiere a el <b>número de cifras</b>, no a la suma del os valores anteriores.</p>
+<p>Ojo, se refiere a el <strong>número de cifras</strong>, no a la suma del os valores anteriores.</p>
 
 <h3>La suma las cifras de los anteriores en Java</h3>
 
