--- a/public/pages/cowboy-bebop.html
+++ b/public/pages/cowboy-bebop.html
@@ -1,5 +1,5 @@
 <!-- 202009281810i -->
-<h1>Cowboy Bebop – <i>The Real Folk Blues</i></h1>
+<h1>Cowboy Bebop – <em>The Real Folk Blues</em></h1>
 
 <blockquote>
     I think it's time to blow this scene.<br>
@@ -8,7 +8,7 @@
 </blockquote>
 
 <p>
-    Este artículo lo publiqué originalmente en un antiguo blog que hoy en día está desaparecido. Y ya que últimamente estoy haciendo reorganización y borrado de <i>backups</i> encuentro muchas antiguas joyas. Esta en concreto me gusta bastante, así que decidí re-publicarla. Espero que os anime a ver esta maravillosa serie, por la que sigo sintiendo el mismo aprecio que se ve reflejado aquí.
+    Este artículo lo publiqué originalmente en un antiguo blog que hoy en día está desaparecido. Y ya que últimamente estoy haciendo reorganización y borrado de <em>backups</em> encuentro muchas antiguas joyas. Esta en concreto me gusta bastante, así que decidí re-publicarla. Espero que os anime a ver esta maravillosa serie, por la que sigo sintiendo el mismo aprecio que se ve reflejado aquí.
 </p>
 
 <p>
@@ -20,7 +20,7 @@
 </p>
 
 <p>
-    Este es el paisaje en el que se sitúa Cowboy Bebop, una pequeña y poco conocida obra de arte de 26 episodios con la que, aunque no seas un <a href="https://es.wikipedia.org/wiki/Otaku">otaku</a> de cuidado, podrás disfrutar como el que más con las aventuras que viven los protagonistas de la serie en su vida como cazarecompensas espaciales. Un <i>western</i> intergaláctico con fundamentos muy arraigados en el cine negro y algún guiño de géneros como el <i>cyberpunk</i> al estilo de Blade Runner,  una combinación perfecta de imagen y sonido que producen un sinfín de sensaciones mientras estas sentado tranquilamente frente a tu televisor.
+    Este es el paisaje en el que se sitúa Cowboy Bebop, una pequeña y poco conocida obra de arte de 26 episodios con la que, aunque no seas un <a href="https://es.wikipedia.org/wiki/Otaku">otaku</a> de cuidado, podrás disfrutar como el que más con las aventuras que viven los protagonistas de la serie en su vida como cazarecompensas espaciales. Un <em>western</em> intergaláctico con fundamentos muy arraigados en el cine negro y algún guiño de géneros como el <em>cyberpunk</em> al estilo de Blade Runner,  una combinación perfecta de imagen y sonido que producen un sinfín de sensaciones mientras estas sentado tranquilamente frente a tu televisor.
 </p>
 
 <!-- <div class="img-2">
@@ -33,7 +33,7 @@
 </div> -->
 
 <p>
-    La historia se centra en la tripulación de la nave bautizada como <i>Bebop</i>, formada por un grupo de personajes muy variopintos: <b>Spike</b>; pasota, sarcástico, divertido, fiel, temerario y con un cierto parecido a Lucky Luck. <b>Jet</b>; un amigo de toda confianza que siempre está allí para cuando se le necesita. <b>Faye</b>; una chica independiente que viene y va según su parecer y, aunque se empeñe en ocultarlo ella también tiene sentimientos. <b>Ed</b>; una niña espontánea, graciosa y muy inteligente, con grandes facetas como <i>hacker</i>. Y <b>Ein</b>; un <a href="https://es.wikipedia.org/wiki/Corgi_gal%C3%A9s_de_Pembroke" title="Raza de perro.">corgi</a> que destaca por su gran astucia. Una tropa de cazarecompensas que vagan por el espacio viviendo aventuras y subsistiendo como pueden. Ellos no son buenos, pero tampoco son malos, son personas corrientes como tu o como yo, amigos que te acompañan durante un viaje alucinante dejando un gran vacío cundo este termina. Todos ellos poseen un oscuro pasado que marca parte de su comportamiento, el cual no lograrás entender hasta prácticamente el final de la serie.
+    La historia se centra en la tripulación de la nave bautizada como <em>Bebop</em>, formada por un grupo de personajes muy variopintos: <strong>Spike</strong>; pasota, sarcástico, divertido, fiel, temerario y con un cierto parecido a Lucky Luck. <strong>Jet</strong>; un amigo de toda confianza que siempre está allí para cuando se le necesita. <strong>Faye</strong>; una chica independiente que viene y va según su parecer y, aunque se empeñe en ocultarlo ella también tiene sentimientos. <strong>Ed</strong>; una niña espontánea, graciosa y muy inteligente, con grandes facetas como <em>hacker</em>. Y <strong>Ein</strong>; un <a href="https://es.wikipedia.org/wiki/Corgi_gal%C3%A9s_de_Pembroke" title="Raza de perro.">corgi</a> que destaca por su gran astucia. Una tropa de cazarecompensas que vagan por el espacio viviendo aventuras y subsistiendo como pueden. Ellos no son buenos, pero tampoco son malos, son personas corrientes como tu o como yo, amigos que te acompañan durante un viaje alucinante dejando un gran vacío cundo este termina. Todos ellos poseen un oscuro pasado que marca parte de su comportamiento, el cual no lograrás entender hasta prácticamente el final de la serie.
 </p>
 
 <p>
@@ -41,7 +41,7 @@
 </p>
 
 <p>
-    Y por último queda resaltar uno de los elementos más importante de la serie, con el cual este anime alcanza mi clasificación como obra de arte. La banda sonora, una preciosa <i>OST</i> centrada no solo en el <a href="https://es.wikipedia.org/wiki/Bebop"><i>bebop</i></a>, como el título indica, sino que recorre todo el jazz adentrándose incluso en otros géneros como el <i>rock</i> o el <i>rhythm&blues</i>, y hasta el <i>funkie</i>. La combinación de imagen y sonido en esta serie es perfecta, sobre todo en las excelentemente coreografiadas escenas de lucha y las batallas espaciales a ritmo del mejor jazz.
+    Y por último queda resaltar uno de los elementos más importante de la serie, con el cual este anime alcanza mi clasificación como obra de arte. La banda sonora, una preciosa <em>OST</em> centrada no solo en el <a href="https://es.wikipedia.org/wiki/Bebop"><em>bebop</em></a>, como el título indica, sino que recorre todo el jazz adentrándose incluso en otros géneros como el <em>rock</em> o el <em>rhythm&blues</em>, y hasta el <em>funkie</em>. La combinación de imagen y sonido en esta serie es perfecta, sobre todo en las excelentemente coreografiadas escenas de lucha y las batallas espaciales a ritmo del mejor jazz.
 </p>
 
 <!-- <iframe class="yt" width="560" height="315" src="https://www.youtube.com/embed/fS8Klrf1DSo" frameborder="0" allowfullscreen></iframe> -->
@@ -50,7 +50,7 @@
     Cowboy Bebop es una serie fabulosa, serie que toca un montón de temas usuales y no tan usuales con los que disfrutarás como un niño, proporcionando de vez en cuando momentos muy filosóficos que te hacen reflexionar ante la pantalla. Dejándonos al final de cada capítulo una frase que muchas veces resume a la perfección lo que se acaba de presenciar. Yo también despediré este artículo con una de esas frases.
 </p>
 
-<h3 style="text-align: right;"><i>SEE YOU SPACE COWBOY...</i></h2>
+<h3 style="text-align: right;"><em>SEE YOU SPACE COWBOY...</em></h2>
 
 <!-- <iframe class="yt" width="420" height="315" src="https://www.youtube.com/embed/Aw3fN3OPk3A" frameborder="0" allowfullscreen></iframe> -->
 
