--- a/public/pages/faq.html
+++ b/public/pages/faq.html
@@ -28,7 +28,7 @@ Preguntas que yo ya se que vas a hacer.
 </p>
 
 <p>
-    Tras esa ardua búsqueda encontré en oferta el dominio <samp>.la</samp> y pensando un subdominio adecuado se me ocurrió "rat", como una rata cantando <i>La, la, la</i>.
+    Tras esa ardua búsqueda encontré en oferta el dominio <samp>.la</samp> y pensando un subdominio adecuado se me ocurrió "rat", como una rata cantando <em>La, la, la</em>.
 </p>
 
 <h2>¿Puedo compartir, citar o copiar el contenido o la totalidad de un post?</h2>
