--- a/public/pages/genesis.html
+++ b/public/pages/genesis.html
@@ -3,11 +3,11 @@
 
 <blockquote>
     <!-- Lo pongo en un blockquote para que la descripción del artículo siga siendo la misma -->
-    <b>(ARTÍCULO DESACTUALIZADO)</b>
+    <strong>(ARTÍCULO DESACTUALIZADO)</strong>
 </blockquote>
 
 <p>
-    El concepto de esta aventura internáutica se basa en la simplicidad. Aprovechando ya las características de HTML5 y un poco de PHP crearé una web estilo Blog basada únicamente en su contenido, sus entradas, con un diseño <b>muy</b> básico y pocos estilos.
+    El concepto de esta aventura internáutica se basa en la simplicidad. Aprovechando ya las características de HTML5 y un poco de PHP crearé una web estilo Blog basada únicamente en su contenido, sus entradas, con un diseño <strong>muy</strong> básico y pocos estilos.
 </p>
 
 <p>
@@ -17,7 +17,7 @@
 <h2>Estructura interna</h2>
 
 <p>
-    La página en sí tiene poca cosa, consta únicamente de un <samp>index.php</samp> y una carpeta <i>articles</i> donde se guardan los diferentes posts. El <samp>index.php</samp>, fiel al concepto original de la web, es únicamente un marco de header-footer donde en en el medio se coloca el contenido. Además he extremado la simplicidad basándome en que por el momento no hay suficientes lineas de código en este archivo como para dividir el HTML, el CSS y el PHP en tres, por lo que así me ahorro tener que cargar archivos remotos, exceptuando el texto del artículo.
+    La página en sí tiene poca cosa, consta únicamente de un <samp>index.php</samp> y una carpeta <em>articles</em> donde se guardan los diferentes posts. El <samp>index.php</samp>, fiel al concepto original de la web, es únicamente un marco de header-footer donde en en el medio se coloca el contenido. Además he extremado la simplicidad basándome en que por el momento no hay suficientes lineas de código en este archivo como para dividir el HTML, el CSS y el PHP en tres, por lo que así me ahorro tener que cargar archivos remotos, exceptuando el texto del artículo.
 </p>
 
 <p>
@@ -87,7 +87,7 @@ pre, code {
 </p>
 
 <p>
-    De todas formas la elección del color, aunque yo creo que estoy contento con ella, por el momento queda bajo revisión. Y en el futuro me gustaría añadir un selector de temas estilo <a href="https://4chan.org" rel="nofollow">4chan</a> donde también agregaré el cada vez mas popular <i>dark mode</i>, entre otros que a mi me gusten.
+    De todas formas la elección del color, aunque yo creo que estoy contento con ella, por el momento queda bajo revisión. Y en el futuro me gustaría añadir un selector de temas estilo <a href="https://4chan.org" rel="nofollow">4chan</a> donde también agregaré el cada vez mas popular <em>dark mode</em>, entre otros que a mi me gusten.
 </p>
 
 <p>
@@ -95,7 +95,7 @@ pre, code {
 </p>
 
 <p>
-    Otro elemento fundamental con respecto a la selección de la fuente fue que, para garantizar el principio de simplicidad máximo que me propuse, debía cargarse de forma local desde el equipo (lo que se denomina como <i>Web Safe Font</i>), no descargarse desde el servidor remoto junto a la página, como se hace hoy día en muchos sitios.
+    Otro elemento fundamental con respecto a la selección de la fuente fue que, para garantizar el principio de simplicidad máximo que me propuse, debía cargarse de forma local desde el equipo (lo que se denomina como <em>Web Safe Font</em>), no descargarse desde el servidor remoto junto a la página, como se hace hoy día en muchos sitios.
 </p>
 
 <p>
