agregado un nuevo tema de color (Github dark dimmed) && actualizada la página de FAQ

--- a/public/pages/color.html
+++ b/public/pages/color.html
@@ -11,4 +11,5 @@
     <li><a href="index.php?page=color.html&id=2">Modo oscuro</a> - Alto contraste.</li>
     <li><a href="index.php?page=color.html&id=3">Auto</a> - Colores por defecto del navegador.</li>
     <li><a href="index.php?page=color.html&id=4">N-O-D-E</a> - Soy muy fan de <a href="https://n-o-d-e.net">esa</a> web.</li>
+    <li><a href="index.php?page=color.html&id=5">GitHub Dark dimmed</a> - Por ahora, mi paleta de colores preferida de GitHub.</li>
 </ul>
