--- a/public/pages/faq.html
+++ b/public/pages/faq.html
@@ -38,11 +38,27 @@ Preguntas que yo ya se que vas a hacer.
 </p>
 
 <p>
-    Por otro lado el código fuente en PHP, HTML, CSS y JS que escriba para que la web funcione está guardado en <a href="https://github.com/1noro/record.rat.la">GitHub</a> bajo la licencia <a href="https://www.gnu.org/licenses/gpl-3.0.html" rel="nofollow">GNU GENERAL PUBLIC LICENSE Versión 3</a>.
+    Por otro lado el código fuente en PHP, HTML, CSS, JS y PYTHON que escriba para que la web funcione está publicado en <a href="https://github.com/1noro/record.rat.la">GitHub</a> bajo la licencia <a href="https://www.gnu.org/licenses/gpl-3.0.html" rel="nofollow">GNU GENERAL PUBLIC LICENSE Versión 3</a>.
 </p>
+
+<h2>¿Cómo puedo recibir actualizaciones sobre los nuevos contenidos de esta página?</h2>
+
+<p>
+    Muy sencillo, solo tienes que descargarte un lector de RSS en tu PC o tu 
+    <em>smartphone</em>, copiar <a href="rss.xml">mi enlace de RSS</a> y 
+    agregarlo a tu feed.
+</p>
+
+<blockquote>
+    Yo, personalmente uso 
+    <a href="https://github.com/martinrotter/rssguard">RSS Guard</a> en mi PC y 
+    <a href="https://github.com/joshuacerdenia/NiceFeed">NiceFeed</a> en el 
+    movil, por si no tenéis ni idea del tema y queréis tener una solución 
+    <strong>yá</strong>.
+</blockquote>
 
 <h2>¿Qué software utilizas?</h2>
 
 <p>
-    Me he currado una lista bastante detallada del software que utilizo habitualmente en <a href="index.php?page=mi-software.html">este post</a>. Espero que responda a la pregunta.
+    Me he currado una lista bastante detallada sobre el software que utilizo habitualmente en <a href="index.php?page=mi-software.html">esta página</a>. Espero que responda a la pregunta.
 </p>
