--- a/public/pages/faq.html
+++ b/public/pages/faq.html
@@ -28,6 +28,21 @@ Preguntas que yo ya se que vas a hacer.
 </p>
 
 <p>
+    <a href="https://www.instagram.com/pepunto.reik" aria-label="Artista: @pepunto.reik">
+        <img src="img/ratBbg.webp" alt="Logotipo de la web, una rata cantando: la la la.">
+    </a>
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org/",
+            "@type": "ImageObject",
+            "contentUrl": "https://record.rat.la/img/ratBbg.webp",
+            "license": "https://creativecommons.org/licenses/by-nc-sa/4.0/",
+            "acquireLicensePage": "https://record.rat.la/index.php?page=faq.html"
+        }
+    </script>
+</p>
+
+<p>
     Tras esa ardua búsqueda encontré en oferta el dominio <samp>.la</samp> y pensando un subdominio adecuado se me ocurrió "rat", como una rata cantando <em>La, la, la</em>.
 </p>
 
