borrando comentarios && fixing bugs && fixing errata

--- a/public/pages/faq.html
+++ b/public/pages/faq.html
@@ -27,6 +27,7 @@ Preguntas que yo ya se que vas a hacer.
     Compré el dominio <samp>rat.la</samp> en busca de tres cosas: un nombre fácil de recordar, corto y asequible. Busqué durante mucho tiempo, probando múltiples combinaciones de letras, intentando evitar los números y descartando los dominios de nivel superior muy largos, estilo <samp>.website</samp>. Incluso llegué a utilizar generadores de palabras aleatorias para conseguir las palabras con 3 letras que encajasen mejor con mis requisitos.
 </p>
 
+<!-- Para evitar que el contenido se mueva al cargar la imagen puse "height: 180.47px;" al <p>, porque la imagen era de 400x180.47 -->
 <p>
     <a href="https://www.instagram.com/pepunto.reik" aria-label="Artista: @pepunto.reik">
         <img src="img/ratBbg.webp" alt="Logotipo de la web, una rata cantando: la la la.">
