actualización en el artículo sobre mi software && agregado método de donación a través de brave

--- a/public/pages/donaciones.html
+++ b/public/pages/donaciones.html
@@ -12,3 +12,9 @@
     <li>Litecoin (<a href="img/litecoin.png">QR</a>): <samp>MUcPMZ7q3dpYbgmwUUf1nwyJ5mke7DTpcd</samp></li> -->
     <li>Dogecoin: <samp>DCciftrDgYjxAEv7DGxZ1J3JR854xCZtn4</samp></li>
 </ul>
+
+<p>
+    También puedes darme una propina con 
+    <a href="https://brave.com/es/brave-rewards/">Barve Rewards</a>, este es 
+    un sítio verificado.
+</p>
