--- a/public/pages/mi-software.html
+++ b/public/pages/mi-software.html
@@ -2,8 +2,9 @@
 <h1>Software que utilizo habitualmente</h1>
 
 <p>
-    Solo listaré aquí programas que considero probados y que he usado durante 
-    un tiempo.
+    Escribo esto a modo de reflexión sobre que programas realmente utilizo, 
+    cuales me hacen ser más productivo en mi día a día, y si debería obviar 
+    alguno en futuras instalaciones.
 </p>
 
 <h2>Básico</h2>
@@ -58,7 +59,7 @@
     mas flexibilidad.
 </p>
 
-<!-- <h3>Editores de texto y entornos de programación</h3>
+<h3>Editores de texto y entornos de programación</h3>
 
 <p>
     Esta sección no solo es confusa, sinó que en realidad yo me encuentro muy 
@@ -76,4 +77,39 @@
     <li>
         <strong>geany</strong> para editar texto plano sin necesidad de plugins. Aunque cada vez lo uso menos, y para una función tan simple como esta acabo usando <strong>nano</strong>.
     </li>
-</ul> -->
+</ul>
+
+<h3>Navegador web</h3>
+
+<p>
+    Esto es un tema complicado. Como persona que programa páginas web de vez en cuando, normalmente 
+    tengo <strong>Chromium</strong> y <strong>Firefox</strong> instalados, para 
+    poder ver las dos caras de la moneda.
+</p>
+
+<p>
+    Creo que la mejor opción actualmente es <strong>Firefox</strong> en 
+    conjunto con las extensiones 
+    <a href="https://github.com/gorhill/uBlock">uBlock Origin</a>, 
+    <a href="https://www.eff.org/es/https-everywhere">HTTPS Everywhere</a> y
+    <a href="https://addons.mozilla.org/es/firefox/addon/strict-pop-up-blocker/">Strict Pop-up Blocker</a>. 
+    Es cierto que en estos días parece que no es tán rápido como 
+    <strong>Chrome</strong> y derivados, pero ya sabemos que estas estadísticas 
+    suelen variar mucho en cada versíon nueva que sale. Además usar 
+    <strong>Firefox</strong>, en mi caso, es mas una elección que yo hago 
+    poniendo la privacidad por delante de la velocidad de navegación.
+</p>
+
+<p>
+    A pesar de todo, he de confesar que, a raíz del dilema privacidad vs 
+    velocidad de navegación, he empezado a probar el navegador 
+    <a href="https://brave.com/es/">Brave</a> (sin ninguna extensión) como 
+    navegador principal, en mi movil primero, puesto que 
+    <strong>Firefox</strong> (a pesar de tener un diseño excelente) es cada 
+    día mas lento, y posteriormente en mi PC, donde más tiempo paso tódos los 
+    días. Aún no puedo sacar ninguna conclusión definitiva de esta experiencia, 
+    y sigo estando a favor de <strong>Firefox</strong>. Sin embargo, si consigo 
+    pasar un par de meses utilizando <strong>Brave</strong> y no encuentro 
+    ningún impedimento puede que termine mudándome. En tal caso supongo que lo 
+    anunciaré en un futuro artículo.
+</p>
